cmake_minimum_required(VERSION 3.0)

SET(TARGET_NAME r-nat-s)

SET(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")

FILE(GLOB_RECURSE SOURCE_FILES "${SOURCE_DIR}/*.c" "${SOURCE_DIR}/*.cpp" "${SOURCE_DIR}/*.cc")
FILE(GLOB_RECURSE HEADER_FILES "${SOURCE_DIR}/*.h" "${SOURCE_DIR}/*.hpp")

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES} ${HEADER_FILES})

SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES COTIRE_ADD_UNITY_BUILD "0")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "stdafx.h")
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES COTIRE_CXX_HOST_INIT "${SOURCE_DIR}/stdafx.cpp")
cotire(${TARGET_NAME})

if (UNIX)
TARGET_LINK_LIBRARIES(${TARGET_NAME} pthread)
endif (UNIX)

INSTALL(TARGETS ${TARGET_NAME} DESTINATION ${TARGET_NAME})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/publish/ DESTINATION ${TARGET_NAME})
